--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 			<h2 id="feedback">Make your Guess!</h2>
 
 			<form>
-				<input type="text" name="userGuess" id="userGuess" class="text" maxlength="3" autocomplete="off" placeholder="Enter your Guess" required/>
+				<input type="text" name="userGuess" id="userGuess" class="text" maxlength="3" autocomplete="off" placeholder="Enter your Guess" />
       			<input type="submit" id="guessButton" class="button" name="submit" value="Guess"/>
+      			<input type="submit" id="newGameButton" class="button" name="submit" value="New Game"/>
 			</form>
 			
       		<p>Guess #<span id="count">0</span>!</p>
